log
Wed, May 14, 2025  8:38:30 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  8:39:55 AM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'read_file':
sudoku.c:24:9: error: unused variable 'i' [-Werror=unused-variable]
     int i , j;
         ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:19: error: 'Node {aka struct <anonymous>}' has no member named 'j'
         if (j != n->j) {  // Excluir el nodo mismo
                   ^~
sudoku.c:56:72: error: expected expression before ';' token
             Node* adjacent = /* obtener nodo en la fila i, columna j */;
                                                                        ^
sudoku.c:57:13: error: implicit declaration of function 'addToList' [-Werror=implicit-function-declaration]
             addToList(&list, adjacent);
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
417abd5
Wed, May 14, 2025  8:41:20 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'read_file':
sudoku.c:24:9: error: unused variable 'i' [-Werror=unused-variable]
     int i , j;
         ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:19: error: 'Node {aka struct <anonymous>}' has no member named 'j'
         if (j != n->j) {  // Excluir el nodo mismo
                   ^~
sudoku.c:56:72: error: expected expression before ';' token
             Node* adjacent = /* obtener nodo en la fila i, columna j */;
                                                                        ^
sudoku.c:57:22: error: passing argument 1 of 'pushBack' from incompatible pointer type [-Werror=incompatible-pointer-types]
             pushBack(&list, adjacent);
                      ^
In file included from test.c:4:0:
list.h:23:6: note: expected 'List * {aka struct List *}' but argument is of type 'List ** {aka struct List **}'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
c68561b
Wed, May 14, 2025  8:41:38 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'read_file':
sudoku.c:24:9: error: unused variable 'i' [-Werror=unused-variable]
     int i , j;
         ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:19: error: 'Node {aka struct <anonymous>}' has no member named 'j'
         if (j != n->j) {  // Excluir el nodo mismo
                   ^~
sudoku.c:56:72: error: expected expression before ';' token
             Node* adjacent = /* obtener nodo en la fila i, columna j */;
                                                                        ^
cc1.exe: all warnings being treated as errors
8444596
Wed, May 14, 2025  8:51:53 AM: 
 sudoku.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'read_file':
sudoku.c:24:9: error: unused variable 'i' [-Werror=unused-variable]
     int i , j;
         ^
sudoku.c: In function 'is_valid':
sudoku.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3ae296b
Wed, May 14, 2025  8:52:17 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'read_file':
sudoku.c:25:13: error: 'j' undeclared (first use in this function)
         for(j = 0;j<9;j++){
             ^
sudoku.c:25:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function 'is_valid':
sudoku.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
9772781
Wed, May 14, 2025  8:52:30 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
077bd89
Wed, May 14, 2025  8:52:51 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
60150be
Wed, May 14, 2025  8:57:42 AM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
10ec08f
